--- a/#src/index.html
+++ b/#src/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Konstrukt Free Template</title>
+  <title>Name</title>
   <meta name="description" content="Clean">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/favicon.png">
