first commit of this task

--- a/#src/index.html
+++ b/#src/index.html
@@ -1,24 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 
   <meta charset="UTF-8">
-  <title>Name</title>
+  <title>CADeasign</title>
   <meta name="description" content="Clean">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/favicon.png">
-  <meta property="og:image" content="img/preview.jpg">
   <link rel="stylesheet" href="css/vendor.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
 
+  <div class="header">
+    <div class="header__container container">
 
+      <a href="" class="header__logo">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon__logo">
+          <use xlink:href="img/icons/icons.svg#logo" href="img/icons/icons.svg#logo" x="0" y="0"></use>
+        </svg>
+      </a>
 
-  <script src="js/script.min.js"></script>
+      <div class="header__menu menu">
+        <div class="menu__icon">
+          <span></span>
+        </div>
+
+        <nav class="menu__body">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="" class="menu__link">О нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="" class="menu__link">Наши ценности</a>
+            </li>
+            <li class="menu__item">
+              <a href="" class="menu__link">Вакансии</a>
+            </li>
+            <li class="menu__item">
+              <a href="" class="menu__link">Начало карьеры</a>
+            </li>
+            <li class="menu__item">
+              <a href="" class="menu__link">Контакты</a>
+            </li>
+            <li class="menu__item menu__item-social">
+              Социальные сети
+              <div class="menu__sub-item">
+                <a href="https://vk.com" class="menu__link-social">
+                  <svg class="icon icon__menu">
+                    <use xlink:href="img/icons/icons.svg#vk" href="img/icons/icons.svg#vk">
+                    </use>
+                  </svg>
+                </a>
+                <a href="https://ok.ru" class="menu__link-social">
+                  <svg class="icon icon__menu">
+                    <use xlink:href="img/icons/icons.svg#ok" href="img/icons/icons.svg#ok"></use>
+                  </svg>
+                </a>
+                <a href="https://facebook.com" class="menu__link-social">
+                  <svg class="icon icon__menu">
+                    <use xlink:href="img/icons/icons.svg#fb" href="img/icons/icons.svg#fb"></use>
+                  </svg>
+                </a>
+                <a href="https://instagram.com" class="menu__link-social">
+                  <svg class="icon icon__menu">
+                    <use xlink:href="img/icons/icons.svg#inst" href="img/icons/icons.svg#inst"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+  <main class="main">
+    <div class="main__container container">
+      <h1 class="main__title">Энергия твоего роста! - заряжаем твою карьеру</h1>
+
+      <a href="" class="main__btn btn-orange">Стать частью команды</a>
+    </div>
+  </main>
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
