--- a/CADeasign/index.html
+++ b/CADeasign/index.html
@@ -89,7 +89,7 @@
 
   <section class="boss">
     <div class="boss__container container">
-      <div class="swiper-container">
+      <div class="swiper-container boss__slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="boss__photo"></div>
@@ -129,6 +129,35 @@
   </section>
 
   <section class="video">
+    <video class="video__section" autoplay>
+      <source src="media/prop.mp4" type="video/mp4">
+      <source src="media/prop.webm" type="video/webm">
+    </video>
+    <div class="video__playBtn"></div>
+  </section>
+
+  <section class="values">
+    <div class="values__container container">
+      <div class="title">Наши ценности</div>
+      <div class="swiper-container values__slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
+            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+          </div>
+
+          <div class="swiper-slide">
+            <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
+            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+          </div>
+          <div class="swiper-slide">
+            <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
+            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
   </section>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
