--- a/CADeasign/index.html
+++ b/CADeasign/index.html
@@ -129,36 +129,212 @@
   </section>
 
   <section class="video">
-    <video class="video__section" autoplay>
+    <video class="video__section">
       <source src="media/prop.mp4" type="video/mp4">
       <source src="media/prop.webm" type="video/webm">
     </video>
-    <div class="video__playBtn"></div>
+    <div class="video__play">
+      <span class="video__play-btn"></span>
+    </div>
   </section>
 
   <section class="values">
     <div class="values__container container">
-      <div class="title">Наши ценности</div>
+      <h2 class="title">Наши ценности</h2>
       <div class="swiper-container values__slider">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
-            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+        <div class="swiper-wrapper values__wrapper">
+          <div class="swiper-slide values__item">
+            <h3 class="values__item-title item-title">Предоставление услуг высочайшего качества</h3>
+            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
+              тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
           </div>
 
-          <div class="swiper-slide">
+          <div class="swiper-slide values__item">
             <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
-            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
+              тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
           </div>
-          <div class="swiper-slide">
+
+          <div class="swiper-slide values__item">
             <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
-            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+            <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
+              тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
           </div>
+
         </div>
         <div class="swiper-pagination"></div>
       </div>
     </div>
   </section>
+
+  <section class="vacancies">
+    <div class="vacancies__container container">
+      <h2 class="vacancies__title title">Вакансии</h2>
+
+      <div class="vacancies__select-wrapper">
+        <div class="vacancies__select-trigger">
+          <span class="select-active">Общий центр обслуживания (Ив...</span>
+        </div>
+        <div class="vacancies__select-options">
+          <span class="vacancies__select-option">Общий центр обслуживания (Иваново)</span>
+          <span class="vacancies__select-option">Общий центр обслуживания (Москва)</span>
+        </div>
+      </div>
+    </div>
+
+    <section class="vacancy">
+
+      <div class="vacancy__wrapper">
+
+        <div class="vacancy__item">
+          <div class="container">
+            <h3 class="vacancy__name item-title">Бухгалтер по расчету заработной платы</h3>
+            <div class="vacancy__salary">68.000 — 80.000 руб.</div>
+
+          </div>
+        </div>
+
+        <div class="vacancy__item">
+          <div class="container">
+            <h3 class="vacancy__name item-title">Бухгалтер по расчету заработной платы</h3>
+            <div class="vacancy__salary">ЗП по результатам собеседования</div>
+          </div>
+        </div>
+
+        <div class="vacancy__item">
+          <div class="container">
+            <h3 class="vacancy__name item-title">Бухгалтер по расчету заработной платы</h3>
+            <div class="vacancy__salary">68.000 — 80.000 руб.</div>
+          </div>
+        </div>
+
+        <div class="vacancy__item">
+          <div class="container">
+            <h3 class="vacancy__name item-title">Бухгалтер по расчету заработной платы</h3>
+            <div class="vacancy__salary">68.000 — 80.000 руб.</div>
+          </div>
+        </div>
+
+        <div class="vacancy__item">
+          <div class="container">
+            <h3 class="vacancy__name item-title">Бухгалтер по расчету заработной платы</h3>
+            <div class="vacancy__salary">ЗП по результатам собеседования</div>
+          </div>
+        </div>
+
+        <div class="vacancy__item">
+          <div class="container">
+            <h3 class="vacancy__name item-title">Бухгалтер по расчету заработной платы</h3>
+            <div class="vacancy__salary">68.000 — 80.000 руб.</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="vacancy__btn btn-orange">Больше вакансий</div>
+
+    </section>
+  </section>
+
+  <section class="history">
+    <div class="container history__container">
+      <h2 class="history__title title">Истории успеха</h2>
+
+      <div class="swiper-container history__slider">
+        <div class="swiper-wrapper history__wrapper">
+
+          <div class="swiper-slide history__slide">
+            <div class="history__content">
+              <div class="history__photo"></div>
+              <div class="history__name">Татьяна Демьянова</div>
+              <div class="history__role">Специлист, отдел ФСО, 32 года</div>
+              <a href="" class="history__link links">Читать историю</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide history__slide">
+            <div class="history__content">
+              <div class="history__photo"></div>
+              <div class="history__name">Татьяна Демьянова</div>
+              <div class="history__role">Специлист, отдел ФСО, 32 года</div>
+              <a href="" class="history__link links">Читать историю</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide history__slide">
+            <div class="history__content">
+              <div class="history__photo"></div>
+              <div class="history__name">Татьяна Демьянова</div>
+              <div class="history__role">Специлист, отдел ФСО, 32 года</div>
+              <a href="" class="history__link links">Читать историю</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="swiper-pagination"></div>
+
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container footer__container">
+
+      <h4 class="footer__title">Отдел подбора персонала:</h4>
+
+      <a href="tel:+88007008000" class="footer__telephone">8 800 700 8000</a>
+
+      <a href="mailto:oco_rabota@mail.ru" class="links footer__link">oco_rabota@mail.ru</a>
+
+      <div class="btn-orange footer__btn">Стать частью команды</div>
+
+      <div class="footer__socials">
+
+        <a href="vk.com" class="footer__social-link">
+          <div class="footer__social-item">
+            <svg class="footer__social-img">
+              <use xlink:href="img/icons/icons.svg#vk"></use>
+            </svg>
+          </div>
+        </a>
+
+        <a href="ok.ru" class="footer__social-link">
+          <div class="footer__social-item">
+            <svg class="footer__social-img">
+              <use xlink:href="img/icons/icons.svg#ok"></use>
+            </svg>
+          </div>
+        </a>
+
+        <a href="facebook.com" class="footer__social-link">
+          <div class="footer__social-item">
+            <svg class="footer__social-img">
+              <use xlink:href="img/icons/icons.svg#fb"></use>
+            </svg>
+          </div>
+        </a>
+
+        <a href="instagram.com" class="footer__social-link">
+          <div class="footer__social-item">
+            <svg class="footer__social-img">
+              <use xlink:href="img/icons/icons.svg#inst"></use>
+            </svg>
+          </div>
+        </a>
+
+      </div>
+
+      <p class="footer__adress">© 1998–2019,«Компания», 53002, Иваново, Лежневская 34 корпус 1</p>
+
+      <a href="" class="links footer__politics">Политика обработки персональных данных</a>
+
+      <a href="#" class="footer__logo">
+        <svg class="footer__logo">
+          <use xlink:href="img/icons/icons.svg#logo_footer"></use>
+        </svg>
+      </a>
+    </div>
+  </footer>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
   <script src="js/script.js"></script>
