add new in desktop version

--- a/#src/index.html
+++ b/#src/index.html
@@ -168,8 +168,8 @@
         </div>
 
         <div class="swiper-container boss__slider">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
+          <div class="swiper-wrapper boss__wrapper">
+            <div class="swiper-slide boss__slide">
               <div class="boss__photo"></div>
               <h2 class="boss__name">Евдокимова Майя</h2>
               <span class="boss__sub-title">Генеральный директор</span>
@@ -179,7 +179,7 @@
                 финансового
                 учёта и отчётности нам.</p>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide boss__slide">
               <div class="boss__photo"></div>
               <h2 class="boss__name">Земелькина Ольга</h2>
               <span class="boss__sub-title">Директор поменьше</span>
@@ -189,7 +189,7 @@
                 финансового
                 учёта и отчётности нам.</p>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide boss__slide">
               <div class="boss__photo"></div>
               <h2 class="boss__name">Рузенвульд Артур</h2>
               <span class="boss__sub-title">Директор побольше меньшего</span>
