--- a/#src/index.html
+++ b/#src/index.html
@@ -52,23 +52,23 @@
               <li class="menu__item menu__item-social">
                 Социальные сети
                 <div class="menu__sub-item">
-                  <a href="https://vk.com" class="menu__link-social">
+                  <a href="https://vk.com" class="menu__link-social" target="_blank">
                     <svg class="icon icon__menu">
                       <use xlink:href="img/icons/icons.svg#vk" href="img/icons/icons.svg#vk">
                       </use>
                     </svg>
                   </a>
-                  <a href="https://ok.ru" class="menu__link-social">
+                  <a href="https://ok.ru" class="menu__link-social" target="_blank">
                     <svg class="icon icon__menu">
                       <use xlink:href="img/icons/icons.svg#ok" href="img/icons/icons.svg#ok"></use>
                     </svg>
                   </a>
-                  <a href="https://facebook.com" class="menu__link-social">
+                  <a href="https://facebook.com" class="menu__link-social" target="_blank">
                     <svg class="icon icon__menu">
                       <use xlink:href="img/icons/icons.svg#fb" href="img/icons/icons.svg#fb"></use>
                     </svg>
                   </a>
-                  <a href="https://instagram.com" class="menu__link-social">
+                  <a href="https://instagram.com" class="menu__link-social" target="_blank">
                     <svg class="icon icon__menu">
                       <use xlink:href="img/icons/icons.svg#inst" href="img/icons/icons.svg#inst"></use>
                     </svg>
@@ -276,9 +276,10 @@
             </div>
 
             <div class="swiper-slide values__item">
-              <h3 class="values__item-title">Предоставление услуг высочайшего качества</h3>
-              <p class="values__item-desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
-                тексты. Вдали от всех живут они в буквунных домах на берегу Семантика большого языкового океана.</p>
+              <h3 class="values__item-title">Стремление к совершенству</h3>
+              <p class="values__item-desc">Текст генерируется абзацами случайным образом от двух до десяти предложений в
+                абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.
+              </p>
             </div>
 
           </div>
@@ -303,7 +304,7 @@
 
         <div class="vacancies__radio-container">
           <div class="vacancies__radio-wrapper">
-            <div class="vacancies__radio-item radio-item-active">Общий цент обслуживания (Иваново)</div>
+            <div class="vacancies__radio-item radio-item-active">Общий центр обслуживания (Иваново)</div>
             <div class="vacancies__radio-button radio-active"></div>
             <div class="vacancies__radio-item text-left">Все вакансии</div>
           </div>
@@ -394,6 +395,54 @@
       </section>
 
     </section>
+
+    <div class="students">
+      <h2 class="students__title">Студентам и молодым специалистам</h2>
+      <span class="student__sub-title">Учишься или недавно закончил направления</span>
+
+      <div class="students__wrapper">
+
+        <div class="students__item">
+          <div class="students__img">
+            <svg class="students__icon">
+              <use xlink:href="img/icons/icons.svg#"></use>
+            </svg>
+          </div>
+          <div class="students__desc">Бухгалтерский учёт</div>
+        </div>
+
+        <div class="students__item">
+          <div class="students__img">
+            <svg class="students__icon">
+              <use xlink:href="img/icons/icons.svg#"></use>
+            </svg>
+          </div>
+          <div class="students__desc">Финансовый менеджмент</div>
+        </div>
+
+        <div class="students__item">
+          <div class="students__img">
+            <svg class="students__icon">
+              <use xlink:href="img/icons/icons.svg#"></use>
+            </svg>
+          </div>
+          <div class="students__desc">Управление персоналом</div>
+        </div>
+
+        <div class="students__item">
+          <div class="students__img">
+            <svg class="students__icon">
+              <use xlink:href="img/icons/icons.svg#"></use>
+            </svg>
+          </div>
+          <div class="students__desc">Социальная психология</div>
+        </div>
+
+      </div>
+
+      <div class="students__form"><span class="students__link">Заполни анкету</span> и отправь нам!</div>
+
+    </div>
 
     <section class="history" id="history">
       <div class="container history__container">
