edit history block for desktop

--- a/#src/index.html
+++ b/#src/index.html
@@ -325,7 +325,6 @@
                 </svg>
               </div>
               <div class="vacancy__salary">68.000 — 80.000 руб.</div>
-
             </div>
           </div>
 
@@ -390,6 +389,7 @@
           </div>
 
         </div>
+
         <div class="vacancy__btn btn-orange">Больше вакансий</div>
 
       </section>
@@ -405,7 +405,7 @@
         <div class="students__item">
           <div class="students__img">
             <svg class="students__icon">
-              <use xlink:href="img/icons/icons.svg#"></use>
+              <use xlink:href="img/icons/icons.svg#buh-stud"></use>
             </svg>
           </div>
           <div class="students__desc">Бухгалтерский учёт</div>
@@ -414,7 +414,7 @@
         <div class="students__item">
           <div class="students__img">
             <svg class="students__icon">
-              <use xlink:href="img/icons/icons.svg#"></use>
+              <use xlink:href="img/icons/icons.svg#fin-stud"></use>
             </svg>
           </div>
           <div class="students__desc">Финансовый менеджмент</div>
@@ -423,7 +423,7 @@
         <div class="students__item">
           <div class="students__img">
             <svg class="students__icon">
-              <use xlink:href="img/icons/icons.svg#"></use>
+              <use xlink:href="img/icons/icons.svg#management-stud"></use>
             </svg>
           </div>
           <div class="students__desc">Управление персоналом</div>
@@ -432,7 +432,7 @@
         <div class="students__item">
           <div class="students__img">
             <svg class="students__icon">
-              <use xlink:href="img/icons/icons.svg#"></use>
+              <use xlink:href="img/icons/icons.svg#soc-stud"></use>
             </svg>
           </div>
           <div class="students__desc">Социальная психология</div>
@@ -456,6 +456,8 @@
                 <div class="history__photo"></div>
                 <div class="history__name">Татьяна Демьянова</div>
                 <div class="history__role">Специлист, отдел ФСО, 32 года</div>
+                <div class="history__quote">«Компания сегодня — это одна из немногих компаний, где действительно делают
+                  крутые вещи. »</div>
                 <a href="" class="history__link links">Читать историю</a>
               </div>
             </div>
@@ -465,6 +467,8 @@
                 <div class="history__photo"></div>
                 <div class="history__name">Татьяна Демьянова</div>
                 <div class="history__role">Специлист, отдел ФСО, 32 года</div>
+                <div class="history__quote">«Компания сегодня — это одна из немногих компаний, где действительно делают
+                  крутые вещи. »</div>
                 <a href="" class="history__link links">Читать историю</a>
               </div>
             </div>
@@ -474,6 +478,8 @@
                 <div class="history__photo"></div>
                 <div class="history__name">Татьяна Демьянова</div>
                 <div class="history__role">Специлист, отдел ФСО, 32 года</div>
+                <div class="history__quote">«Компания сегодня — это одна из немногих компаний, где действительно делают
+                  крутые вещи. »</div>
                 <a href="" class="history__link links">Читать историю</a>
               </div>
             </div>
