--- a/#src/index.html
+++ b/#src/index.html
@@ -248,10 +248,7 @@
     </section>
 
     <section class="video">
-      <video class="video__section">
-        <source src="media/prop.mp4" type="video/mp4">
-        <source src="media/prop.webm" type="video/webm">
-      </video>
+      <div class="video__poster"></div>
       <div class="video__play">
         <span class="video__play-btn"></span>
       </div>
@@ -560,7 +557,7 @@
 
   <div class="vacancy__popup popup">
     <div class="popup__wrapper">
-      <div class="popup__container container">
+      <div class="popup__container">
         <div class="popup__close">
           <div class="popup__close-btn"></div>
         </div>
@@ -639,6 +636,13 @@
         <div class="btn-orange popup__btn">Откликнуться</div>
       </div>
     </div>
+  </div>
+
+  <div class="video__popup popup">
+    <iframe width="560" height="315" class="video__yt" src="https://www.youtube.com/embed/yOgBPa5kd5M"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
   </div>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
